Fix responsive UI layout on mobile devices

--- a/src/main/resources/static/css/output.css
+++ b/src/main/resources/static/css/output.css
@@ -1278,6 +1278,10 @@ h1, h2, h3, h4, h5, h6 {
   flex: 1 1 0%;
 }
 
+.flex-shrink {
+  flex-shrink: 1;
+}
+
 .flex-shrink-0 {
   flex-shrink: 0;
 }
@@ -2346,6 +2350,10 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 10px;
 }
 
+.text-\[11px\] {
+  font-size: 11px;
+}
+
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
@@ -3239,6 +3247,10 @@ h1, h2, h3, h4, h5, h6 {
 
   .sm\:inline-block {
     display: inline-block;
+  }
+
+  .sm\:inline {
+    display: inline;
   }
 
   .sm\:flex {
